# remote-control

./: .browserslistrc  .editorconfig  .eslintignore  .eslintrc  .gitignore  .prettierrc  .prettierrc.js  Cargo.toml  README.md  babel.config.js  lib-licenses.txt  package-lock.json  package.json  rollup.config.js
.github/: dependabot.yml
frontend/: App.module.css  App.svelte
frontend/components/: isMobile.js  request.js
frontend/components/Button/: Button.module.css  Button.svelte
frontend/components/ControlButton/: ControlButton.svelte  index.js
frontend/components/Controls/: Controls.module.css  Controls.svelte  index.js
frontend/components/Icons/: ClearCache.svelte  Click.svelte  Enter.svelte  Escape.svelte  Fullscreen.svelte  Help.svelte  Minus.svelte  Mouse.svelte  Pause.svelte  PlayPause.svelte  Plus.svelte  Refresh.svelte  Remote.svelte  ScrollDown.svelte  ScrollUp.svelte  SeekBack.svelte  SeekForward.svelte  Settings.svelte  SkipBack.svelte  SkipForward.svelte  Svg.svelte  Tab.svelte  index.js
frontend/components/InfoToast/: InfoToast.module.css  InfoToast.svelte  index.js
frontend/components/Page/: Page.module.css  Page.svelte  index.js
frontend/components/RangeInput/: index.js  (+2 more)
frontend/stores/: info.js  settings.js
frontend/util/: ids.js
public/: index.html
rollupPlugins/: comp.js  compWorker.js  consts.js  hash.js  html.js  logger.js  manifest.js  minifyHtml.js  util.js
scripts/: b.js  build-legacy.js  build.js  compress.js
src/: _html.rs  local_ip.rs  main.rs  win copy.rs  win.rs
static/: index.html
static/icons/: logo-512.jxl
(+9 files in other folders)
