[package]
name = "remote"
version = "0.2.0"
authors = ["michel <michel.strelow97@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
enigo = "0.0.14"
rocket = "0.4.10"
rocket_contrib = "0.4.10"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
qr2term = "0.3"
dns-lookup = "1.0.8"
regex = "1.5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
